Fix: Updated Vertical Layout to now align logout button at button of navbar and added theme toggle.

--- a/src/components/lazy-components/nav-bar/vertical-navbar/lazy-vertical-navbar.module.css
+++ b/src/components/lazy-components/nav-bar/vertical-navbar/lazy-vertical-navbar.module.css
@@ -1,29 +1,24 @@
 .navbar {
   min-height: calc(100vh - 150px);
-  padding: var(--mantine-spacing-md);
   padding-bottom: 0;
   display: flex;
   flex-direction: column;
 }
 
 .header {
-  padding: var(--mantine-spacing-md);
-  padding-top: 0;
-  margin-left: calc(var(--mantine-spacing-md) * -1);
-  margin-right: calc(var(--mantine-spacing-md) * -1);
+  padding: 1.5rem;
   color: light-dark(var(--mantine-color-black), var(--mantine-color-white));
-  border-bottom: 1px solid light-dark(var(--mantine-color-gray-3), var(--mantine-color-dark-4));
+  border-bottom: 2px solid var(--border-color);
+
 }
 
 .links {
+  padding: 1.5rem !important;
   flex: 1;
-  margin-left: calc(var(--mantine-spacing-md) * -1);
-  margin-right: calc(var(--mantine-spacing-md) * -1);
+
 }
 
 .footer {
-  padding-top: 1.5rem;
-  margin-left: calc(var(--mantine-spacing-md) * -1);
-  margin-right: calc(var(--mantine-spacing-md) * -1);
-  border-top: 1px solid light-dark(var(--mantine-color-gray-3), var(--mantine-color-dark-4));
+  padding: 1.5rem !important;
+  border-top: 2px solid var(--border-color);
 }
